created login, signup, training and welcome components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-<button mat-button color="accent">Click Me</button>
-
-<mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
-<mat-icon aria-hidden="false" aria-label="Example home icon">3d_rotation</mat-icon>
+<router-outlet></router-outlet>
 
 
