--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -12,9 +12,21 @@
         placeholder="Your email"
         ngModel
         name="email"
+        required
+        email
+        #emailInput="ngModel"
       />
+      <mat-error *ngIf="emailInput.hasError('required')"
+        >Field must not be empty.</mat-error
+      >
+      <mat-error *ngIf="!emailInput.hasError('required')"
+        >E-Mail is invalid.</mat-error
+      >
     </mat-form-field>
-    <mat-form-field class="opaque-form-field">
+    <mat-form-field
+      class="opaque-form-field"
+      hintLabel="Should be at least 6 characters long"
+    >
       <input
         type="password"
         matInput
@@ -22,7 +34,12 @@
         color="primary"
         ngModel
         name="password"
+        required
+        minlength="6"
+        #pwInput="ngModel"
       />
+      <mat-hint align="end">{{ pwInput.value?.length }} / 6</mat-hint>
+      <mat-error>Has to be at least 6 characters long.</mat-error>
     </mat-form-field>
     <button type="submit" mat-raised-button color="primary">Submit</button>
   </form>
